--- a/public/css/base.css
+++ b/public/css/base.css
@@ -44,11 +44,16 @@ html {
     background-color: #0099cc;
 }
 
+.commentBox {
+  overflow: hidden;
+}
+
 .commentBox h1, h2 {
   color: #ffffff;
-  padding: 5px;
+  padding: 5px; 
   border-radius: 10px 0px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
 }
 
 .commentBox h1 {
@@ -96,6 +101,7 @@ html {
   color: white;
   height: 25px;
   width: 10%;
+  min-width: 75px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
