--- a/public/css/base.css
+++ b/public/css/base.css
@@ -7,6 +7,8 @@
     clear: both;
     display: block;
 }
+
+
 [class*="col-"] {
     float: left;
     padding: 15px;
@@ -24,9 +26,42 @@
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
 
+.first-row {margin-top: 50px;}
+
 html {
     font-family: "Lucida Sans", sans-serif;
+    padding: 0;
 }
+
+.navBar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-height: 50px;
+    overflow: auto;
+    background-color: #333;
+}
+
+.navBar li {
+    float: left;
+    display: inline;
+}
+
+.navBar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.navBar li a:hover {
+    background-color: #111;
+}
+
 
 .menu ul {
     list-style-type: none;
@@ -39,29 +74,32 @@ html {
     background-color: #2B525E;
     color: #ffffff;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    overflow: auto;
 }
 .menu li:hover {
     background-color: #0099cc;
 }
 
-.commentBox {
-  overflow: hidden;
+.commentBox h1, h2, span{
+  overflow: auto;
 }
 
 .commentBox h1, h2 {
   color: #ffffff;
-  padding: 5px; 
+  padding: 5px;
   border-radius: 10px 0px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
 }
 
 .commentBox h1 {
+  font-size: 1.5em;
   background-color: #2B525E;
   margin: 0;
 }
 
 .commentBox h2 {
+  font-size: 1.2em;
   background-color: #487372;
   margin: 10;
 }
@@ -110,6 +148,9 @@ html {
   color: #2B525E;
 }
 
+
 body {
   background-color: #CFE0E6;
+  padding: 0px;
+  margin: 0px;
 }
